# shorten-url

./: .gitignore  README.md
serverless-function/: package.json
serverless-function/api/: index.js
shorten-url-cli/: Cargo.toml  build.rs
shorten-url-cli/migrations/: 20240412095630_shortenurl.up.sql
shorten-url-cli/src/: main.rs  utils.rs
shorten-url-functions/: package.json  pnpm-lock.yaml
