[package]
name = "shortenurl"
version = "0.1.0"
edition = "2021"

# Custom build 
build = "build.rs"

[build-dependencies]
dirs = "5.0"
toml = "0.8.12"
serde = { version = "1.0", features = ["derive"] }

[dependencies]
base62 = "2.0.2"
clap = { version = "4.5.4", features=["derive"] }
dirs = "5.0"
inquire = "0.7.4"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = [
"postgres",
"chrono",
"uuid",
"runtime-tokio-rustls"
] }
tabled = "0.15.0"
toml = "0.8.12"
tokio = {version = "1", features = ["full"]}
uuid = { version = "1.8.0", features = ["serde", "v4"]}